--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -17,7 +17,9 @@
 
 בפייתון, יש המון סוגים שונים: מספרים, טקסט, בוליאנים, רשימות ,סטים, מילונים, וטאפלים הם סוגים של נתונים.
 
-אם נזהה נכון את הסוג – נוכל לעשות איתו בדיוק את התפקיד שלו. 
+ואם נזהה נכון את הסוג של כל דבר נוכל לדעת אילו פעולות אפשר לבצע עליו ואיך להשתמש בו בצורה נכונה
+
+בחירה נכונה של סוג הנתון עוזרת למנוע שגיאות ומאפשרת לכתוב קוד ברור מדויק וקריא יותר
 
 ## 🔍 הסברים ודוגמאות
 
