--- a/01_basics/4.0_data_types.md
+++ b/01_basics/4.0_data_types.md
@@ -10,16 +10,16 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘 סוגי נתונים – Data Types
+# 📘 סוגי נתונים - Data Types
 
 ## ✨ הסבר
-לכל דבר שאנחנו שומרים בפייתון יש סוג – כמו ש- "מים" הם נוזל, ו "אבן" היא מוצק.  
+לכל דבר שאנחנו שומרים בפייתון יש סוג כמו ש- "מים" הם נוזל, ו "אבן" היא מוצק.  
 
 בפייתון, יש המון סוגים שונים: מספרים, טקסט, בוליאנים, רשימות ,סטים, מילונים, וטאפלים הם סוגים של נתונים.
 
-ואם נזהה נכון את הסוג של כל דבר נוכל לדעת אילו פעולות אפשר לבצע עליו ואיך להשתמש בו בצורה נכונה
+ואם נזהה נכון את הסוג של כל דבר נוכל לדעת אילו פעולות אפשר לבצע עליו ואיך להשתמש בו בצורה נכונה.
 
-בחירה נכונה של סוג הנתון עוזרת למנוע שגיאות ומאפשרת לכתוב קוד ברור מדויק וקריא יותר
+בחירה נכונה של סוג הנתון עוזרת למנוע שגיאות ומאפשרת לכתוב קוד ברור מדויק וקריא יותר.
 
 ## 🔍 הסברים ודוגמאות
 
