--- a/01_basics/4.0_type_casting.md
+++ b/01_basics/4.0_type_casting.md
@@ -145,3 +145,46 @@ print(bool(False))
 
 </div>
 <!-- DC_FOOTER_END -->
+
+```python
+
+print(type(str("hello")))
+print(type(str(10)))
+print(type(str(3.14)))
+print(type(str(True)))
+print(type(str(False)))
+
+print(type(int("123")))
+# print(int("12a"))      # ValueError מחרוזת לא מספר חוקי
+
+print(type(int(7)))
+
+print(type(int(3.9)))          # חיתוך החלק העשרוני
+print(type(int(-3.9)))
+
+print(type(int(True)))         # 1
+print(type(int(False)))        # 0
+
+print(type(float("3.14")))
+# print(float("abc"))    # ValueError מחרוזת לא מספר חוקי
+
+print(type(float(7)))
+
+print(type(float(2.5)))
+
+print(type(float(True)))       # 1.0
+print(type(float(False)))      # 0.0
+
+
+print(type(bool("hello")))
+print(type(bool("")))           # מחרוזת ריקה
+
+print(type(bool(7)))
+print(type(bool(0)))
+
+print(type(bool(2.5)))
+print(type(bool(0.0)))
+
+print(type(bool(True)))
+print(type(bool(False)))
+```
