--- a/01_basics/5.0_numbers.md
+++ b/01_basics/5.0_numbers.md
@@ -10,11 +10,11 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘 מספרים – Numbers
+# 📘 מספרים - Numbers
 
 ## ✨ הסבר
 מספרים הם אחת מהשפות הכי פשוטות שהמחשב מבין.  
-אם אנחנו רוצים לעשות חישובים כמו חיבור, חיסור, כפל או חילוק – פייתון תעשה את זה בשבילנו.  
+אם אנחנו רוצים לעשות חישובים כמו חיבור, חיסור, כפל או חילוק - פייתון תעשה את זה בשבילנו.  
 רק צריך לכתוב את זה נכון, כמו במחשבון.`
 
 ## 🔍 הסברים ודוגמאות
@@ -27,33 +27,27 @@ b = 3.5       # float
 
 ### חיבור, חיסור, כפל, חילוק
 ```python
-print(a + b)  # addition
-print(a - b)  # subtraction
-print(a * b)  # multiplication
-print(a / b)  # division (always float)
+print(a + b)  # ועוד
+print(a - b)  # פחות
+print(a * b)  # כפול
+print(a / b)  # חלקי
 ```
 
 ### חילוק שלם ושארית
 ```python
-print(a // 3)  # floor division
-print(a % 3)   # modulus (remainder)
+print(a // b)  # כמה פעמים אתה יכול לחלק לכל אחד מהאנשים
+print(a % b)   # מודולו - כמה שארית נשארה לך ביד
 ```
 
 ### העלאה בחזקה
 ```python
-print(2 ** 3)  # 2 to the power of 3 = 8
-```
-
-### המרת סוגים
-```python
-x = "5"
-print(int(x) + 3)  # Converts string to int before adding
+print(2 ** 3)  # 8
 ```
 
 ## 💡 טיפים מתקדמים
 - חילוק רגיל תמיד מחזיר float גם אם שני המספרים הם int  
 - `//` זו דרך לבצע "חילוק עגול" בלי שארית  
-- `**` זו הדרך להעלות בחזקה – לא להשתמש ב־^ כי זה משהו אחר בפייתון
+- `**` זו הדרך להעלות בחזקה - לא להשתמש ב־^ כי זה משהו אחר בפייתון
 
 ## ✅ בדוק את עצמך
 1. מה ההבדל בין `/` לבין `//`?  
@@ -71,7 +65,7 @@ print(int(x) + 3)  # Converts string to int before adding
 📘 *All Rights Reserved © Dvir Cabessa 2025*  
 📘 *כל הזכויות שמורות © דביר קבסה 2025*  
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only - copying or distribution without permission is prohibited.*  
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
