--- a/01_basics/5.0_numbers.md
+++ b/01_basics/5.0_numbers.md
@@ -27,16 +27,28 @@ b = 3.5       # float
 
 ### חיבור, חיסור, כפל, חילוק
 ```python
-print(a + b)  # ועוד
-print(a - b)  # פחות
-print(a * b)  # כפול
-print(a / b)  # חלקי
+print(a + b)  # ועוד 13.5
+print(a - b)  # פחות 6.5
+print(a * b)  # כפול 35.0
+print(a / b)  # חלקי 2.85
 ```
 
 ### חילוק שלם ושארית
 ```python
-print(a // b)  # כמה פעמים אתה יכול לחלק לכל אחד מהאנשים
-print(a % b)   # מודולו - כמה שארית נשארה לך ביד
+x = 5        # int
+y = 2      # float
+
+# כמה פעמים אתה יכול לחלק לכל אחד מהאנשים
+print(x // y)  # 2
+
+# מודולו - כמה שארית נשארה לך ביד
+print(x % y) # 1
+
+print(a // b)  # 2.0
+print(a % b) # 3.0
+
+
+
 ```
 
 ### העלאה בחזקה
