--- a/01_basics/5.1_numbers_exercises.md
+++ b/01_basics/5.1_numbers_exercises.md
@@ -10,11 +10,11 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘 תרגול – מספרים (Numbers)
+# 📘 תרגול - מספרים (Numbers)
 
 ## 🧪 תרגילים
 
-1. צרו שני משתנים בשם `x` ו־`y` עם הערכים `10` ו־`3`.  
+1. צרו שני משתנים בשם `x` ו-`y` עם הערכים `10` ו-`3`.  
 2. חשבו את:
    - סכום `x + y`
    - ההפרש `x - y`
@@ -58,7 +58,7 @@ print("5" + 3)
 📘 *All Rights Reserved © Dvir Cabessa 2025*  
 📘 *כל הזכויות שמורות © דביר קבסה 2025*  
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only - copying or distribution without permission is prohibited.*  
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
