--- a/01_basics/6.0_Str_Slicing.md
+++ b/01_basics/6.0_Str_Slicing.md
@@ -55,9 +55,10 @@ text[1::2]
 ### 🔍 דוגמה בסיסית:
 
 ```python
-#       012345
-text = "Python"
-#      -654321
+text[Start:Stop:Step]
+#       0123456789012
+text = "I love Python"
+       -3210987654321
 ```
 
 #### 🔸 הסבר על אינדקסים:
