--- a/01_basics/6.2_strings_exercises.md
+++ b/01_basics/6.2_strings_exercises.md
@@ -21,23 +21,23 @@
 first = "Hello"
 second = "World"
 
-והדפיסו את הפלט: `"Hello World"ו`
+והדפיסו את הפלט: `"Hello World"`
 
-3. כתבו קוד שמדפיס את האורך של המחרוזת `"Python is cool"`.ו
+3. כתבו קוד שמדפיס את האורך של המחרוזת `"Python is cool"`.
 
-4. צרו משתנה עם המחרוזת `"  hello world  "` והדפיסו את המחרוזת אחרי שימוש ב־`strip()`ו.
+4. צרו משתנה עם המחרוזת `"  hello world  "` והדפיסו את המחרוזת אחרי שימוש ב־`strip()`.
 
-5. כתבו מחרוזת עם אותיות קטנות והפכו אותה ל־uppercaseו.
+5. כתבו מחרוזת עם אותיות קטנות והפכו אותה ל־uppercase.
 
-6. כתבו קוד שמחליף את המילה `"cat"` ב־`"dog"` בתוך המשפט `"The cat is sleeping"`ו.
+6. כתבו קוד שמחליף את המילה `"cat"` ב־`"dog"` בתוך המשפט `"The cat is sleeping"`.
 
 7. פצלו את המחרוזת `"one,two,three"` לרשימה.
 
 8. חברו רשימה של המילים `["Python", "is", "fun"]` למשפט אחד עם רווחים ביניהם.
 
-9. השתמשו ב־`find()` כדי למצוא את המיקום של האות `"o"` במילה `"book"`ו.
+9. השתמשו ב־`find()` כדי למצוא את המיקום של האות `"o"` במילה `"book"`.
 
-10. השתמשו ב־`count()` כדי לדעת כמה פעמים מופיעה האות `"a"` במילה `"banana"`ו.
+10. השתמשו ב־`count()` כדי לדעת כמה פעמים מופיעה האות `"a"` במילה `"banana".
 ```
 ## 📌 הוראות
 - זכרו להשתמש באנגלית בתוך הקוד בלבד.  
