--- a/01_basics/6.2_strings_exercises.md
+++ b/01_basics/6.2_strings_exercises.md
@@ -27,7 +27,7 @@ second = "World"
 
 4. צרו משתנה עם המחרוזת `"  hello world  "` והדפיסו את המחרוזת אחרי שימוש ב־`strip()`.
 
-5. כתבו מחרוזת עם אותיות קטנות והפכו אותה ל־uppercase.
+5. כתבו מחרוזת עם אותיות קטנות והפכו אותה ל־upper.
 
 6. כתבו קוד שמחליף את המילה `"cat"` ב־`"dog"` בתוך המשפט `"The cat is sleeping"`.
 
