--- a/01_basics/6.2_strings_exercises.md
+++ b/01_basics/6.2_strings_exercises.md
@@ -27,7 +27,7 @@ second = "World"
 
 4. צרו משתנה עם המחרוזת `"  hello world  "` והדפיסו את המחרוזת אחרי שימוש ב־`strip()`.
 
-5. כתבו מחרוזת עם אותיות קטנות והפכו אותה ל־upper.
+5. כתבו מחרוזת עם אותיות קטנות והפכו אותה ל־`()upper`.
 
 6. כתבו קוד שמחליף את המילה `"cat"` ב־`"dog"` בתוך המשפט `"The cat is sleeping"`.
 
@@ -39,24 +39,20 @@ second = "World"
 
 10. השתמשו ב־`count()` כדי לדעת כמה פעמים מופיעה האות `"a"` במילה `"banana".
 ```
-## 📌 הוראות
-- זכרו להשתמש באנגלית בתוך הקוד בלבד.  
-- התרגילים נועדו לעזור להבין פעולות בסיסיות עם מחרוזות – תרגול חשוב להבנה.  
-- השתמשו במתודות שראינו כמו: `len()`, `strip()`, `replace()`, `split()`, `join()` וכו'.
 
 
 
 ### 📘 תרגול: חיתוך מחרוזות (Slicing)
 
 ---
+```python
 
 #### 🧪 משימה 1: חיתוך לפי טווחים
 
 בהתבסס על:
 
-```python
 text = "SlicingIsPowerful"
-```
+
 
 🔹 כתוב את הביטויים שיחזירו את המחרוזות הבאות:
 
@@ -83,9 +79,7 @@ text = "SlicingIsPowerful"
 
 בהנחה:
 
-```python
 word = "Data"
-```
 
 מה תחזיר כל אחת מהפקודות:
 
@@ -94,16 +88,13 @@ word = "Data"
 3. `word[2:2]`
 4. `word[::-2]`
 5. `word[::0]`
+```
+## 📌 הוראות
+- זכרו להשתמש באנגלית בתוך הקוד בלבד.  
+- התרגילים נועדו לעזור להבין פעולות בסיסיות עם מחרוזות – תרגול חשוב להבנה.  
+- השתמשו במתודות שראינו כמו: `len()`, `strip()`, `replace()`, `split()`, `join()` וכו'.
 
----
 
-#### 🧪 אתגר – חיתוך דינאמי
-
-כתוב פונקציה שמקבלת מחרוזת, ומחזירה:
-
-1. את שלושת התווים האמצעיים (אם יש מספר זוגי – שניים)
-2. את כל התווים מלבד הראשון והאחרון
-3. את התווים ההפוכים בדילוג של 3
 
 <!-- DC_FOOTER_START -->
 ---
