--- a/01_basics/8.1_Input_Practice.md
+++ b/01_basics/8.1_Input_Practice.md
@@ -12,7 +12,8 @@
 
 ### 📘 תרגול: קלט מהמשתמש – `input()`
 
----
+```python
+
 
 #### 🧪 משימה 1 – קלט פשוט והצגה
 
@@ -24,9 +25,8 @@
 
 לאחר מכן הדפס משפט כגון:
 
-```
+
 שלום דביר, בן 24 מ־רמת גן!
-```
 
 ---
 
@@ -47,9 +47,9 @@
 
 דוגמה קלט:
 
-```
+
 10 20 30
-```
+
 
 ---
 
@@ -67,9 +67,7 @@
 
 בנה תוכנית ששואלת שוב ושוב:
 
-```text
 "הכנס מילה (או 'סיום' כדי לצאת):"
-```
 
 * אם המשתמש כותב `'סיום'` – התוכנית תפסיק
 * אחרת – הדפס את המילה **מהסוף להתחלה**
@@ -81,7 +79,7 @@
 בקש מהמשתמש את שמו המלא.
 הפרד בין השם הפרטי לשם המשפחה (בהנחה שהם מופרדים ברווח), והצג כל אחד בנפרד.
 אם לא הוזן רווח, הדפס הודעת שגיאה מתאימה.
-
+```
 <!-- DC_FOOTER_START -->
 ---
 
