--- a/01_basics/8.1_Input_Practice.md
+++ b/01_basics/8.1_Input_Practice.md
@@ -10,11 +10,11 @@
 ---
 <!-- DC_HEADER_END -->
 
-### 📘 תרגול: קלט מהמשתמש – `input()`
+### 📘 תרגול: קלט מהמשתמש - `input()`
 
 ```python
 
-#### 🧪 משימה 1 – קלט פשוט והצגה
+#### 🧪 משימה 1 - קלט פשוט והצגה
 
 כתוב קוד שמבקש מהמשתמש:
 
@@ -25,10 +25,10 @@
 לאחר מכן הדפס משפט כגון:
 
 
-שלום דביר, בן 24 מ־רמת גן!
+שלום דביר, בן 24 מ-פתח תקווה!
 
 
-#### 🧪 משימה 2 – חשבון פשוט
+#### 🧪 משימה 2 - חשבון פשוט
 
 בקש מהמשתמש שני מספרים שלמים והדפס:
 
@@ -38,7 +38,7 @@
 * החלוקה (float)
 
 
-#### 🧪 משימה 3 – מספרים בשורה אחת
+#### 🧪 משימה 3 - מספרים בשורה אחת
 
 בקש מהמשתמש להכניס **שלושה מספרים מופרדים ברווח** בשורת קלט אחת, והדפס את הממוצע ביניהם.
 
@@ -48,7 +48,7 @@
 10 20 30
 
 
-#### 🧪 משימה 4 – עיבוד טקסט
+#### 🧪 משימה 4 - עיבוד טקסט
 
 בקש מהמשתמש מילה, והדפס:
 
@@ -57,14 +57,14 @@
 * את מספר התווים בה
 
 
-#### 🧪 משימה 5 – לולאת קלט עם תנאי יציאה
+#### 🧪 משימה 5 - לולאת קלט עם תנאי יציאה
 
 בנה תוכנית ששואלת שוב ושוב:
 
 "הכנס מילה (או 'סיום' כדי לצאת):"
 
-* אם המשתמש כותב `'סיום'` – התוכנית תפסיק
-* אחרת – הדפס את המילה **מהסוף להתחלה**
+* אם המשתמש כותב `'סיום'` - התוכנית תפסיק
+* אחרת - הדפס את המילה **מהסוף להתחלה**
 
 
 #### 🧠 אתגר
@@ -84,7 +84,7 @@
 📘 *All Rights Reserved © Dvir Cabessa 2025*  
 📘 *כל הזכויות שמורות © דביר קבסה 2025*  
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only - copying or distribution without permission is prohibited.*  
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
