--- a/02_operators/8.0_operators.md
+++ b/02_operators/8.0_operators.md
@@ -1,115 +1,126 @@
 <!-- DC_HEADER_START -->
+
 <div align="center">
 
-🐍 **Python Learning Series | סדרת לימודי פייתון**  
-**Dvir Cabessa | דביר קבסה**  
+🐍 **Python Learning Series | סדרת לימודי פייתון**
+**Dvir Cabessa | דביר קבסה**
 © 2025 All Rights Reserved | כל הזכויות שמורות
 
 </div>
 
 ---
+
 <!-- DC_HEADER_END -->
 
 # 📘 אופרטורים – Operators
 
 ## ✨ הסבר
-אופרטורים הם סימנים מתמטיים כמו `+` לחיבור או `==` להשוואה.  
-הם כמו סימנים מתמטיים או לוגיים, והמחשב משתמש בהם כדי להבין מה אנחנו רוצים לחשב או לבדוק. 
+
+אופרטורים הם סימנים מתמטיים כמו `+` לחיבור או `==` להשוואה.
+הם כמו סימנים מתמטיים או לוגיים, והמחשב משתמש בהם כדי להבין מה אנחנו רוצים לחשב או לבדוק.
 
 ## 🔍 הסברים ודוגמאות
 
 ### אופרטורים מתמטיים (Arithmetic Operators)
+
 ```python
 a = 10
 b = 3
 
-print(a + b)  # Addition
-print(a - b)  # Subtraction
-print(a * b)  # Multiplication
-print(a / b)  # Division
-print(a % b)  # Modulus
-print(a ** b) # Exponentiation
-print(a // b) # Floor division
+print(a + b)   # חיבור
+print(a - b)   # חיסור
+print(a * b)   # כפל
+print(a / b)   # חילוק
+print(a % b)   # שארית בחילוק
+print(a ** b)  # חזקה
+print(a // b)  # חילוק שלם (ללא שארית עשרונית)
 ```
 
 ### אופרטורים להשוואה (Comparison Operators)
+
 ```python
-print(a == b)  # Equal
-print(a != b)  # Not equal
-print(a > b)   # Greater than
-print(a < b)   # Less than
-print(a >= b)  # Greater or equal
-print(a <= b)  # Less or equal
+print(a == b)  # שווה
+print(a != b)  # לא שווה
+print(a > b)   # גדול מ
+print(a < b)   # קטן מ
+print(a >= b)  # גדול או שווה ל
+print(a <= b)  # קטן או שווה ל
 ```
 
 ### אופרטורים לוגיים (Logical Operators)
+
 ```python
 x = True
 y = False
 
-print(x and y)  # False
-print(x or y)   # True
-print(not x)    # False
+print(x and y)  # וגם (וגם תנאי ראשון וגם תנאי שני)
+print(x or y)   # או (לפחות אחד מהתנאים מתקיים)
+print(not x)    # שלילה
 ```
 
 ### אופרטורי השמה (Assignment Operators)
+
 ```python
 x = 5
-x += 3  # Same as x = x + 3
-x -= 2
-x *= 2
-x /= 3
+x += 3  # אותו דבר כמו: x = x + 3
+x -= 2  # חיסור והצבה
+x *= 2  # כפל והצבה
+x /= 3  # חילוק והצבה
 ```
 
 ### אופרטורים לחברות (Membership Operators)
+
 ```python
 text = "Python"
-print("P" in text)    # True
-print("p" in text)    # False
-print("z" not in text)  # True
+print("P" in text)       # בודק האם האות P קיימת במחרוזת
+print("p" in text)       # בודק אות קטנה (רגיש לאותיות)
+print("z" not in text)   # בודק האם האות z לא קיימת
 ```
 
 ### אופרטורים לזהות (Identity Operators)
+
 ```python
 a = [1, 2, 3]
 b = a
 c = [1, 2, 3]
 
-print(a is b)   # True – same object
-print(a is c)   # False – same value, different object
-print(a == c)   # True – values are equal
+print(a is b)   # אותו אובייקט בדיוק בזיכרון
+print(a is c)   # ערכים זהים אבל אובייקט שונה
+print(a == c)   # הערכים שווים
 ```
 
 ## 💡 טיפים מתקדמים
-- השתמשו באופרטורים בצורה מדויקת כדי למנוע תקלות לוגיות  
-- `is` משווה זהות של אובייקט – לא רק את הערכים  
-- `in` בודק האם משהו קיים בתוך משהו אחר – נפוץ מאוד עם מחרוזות ורשימות  
+
+* השתמשו באופרטורים בצורה מדויקת כדי למנוע טעויות לוגיות
+* `is` בודק זהות בזיכרון ולא רק ערכים
+* `in` שימושי מאוד בבדיקות על מחרוזות, רשימות ומילונים
 
 ## ✅ בדוק את עצמך
-1. מה ההבדל בין `==` ל־`is`?  
-2. מתי משתמשים ב־`and`, `or`, `not`?  
-3. מה תחזיר הפעולה `5 % 2`?
+
+1. מה ההבדל בין `==` ל־`is`
+2. מתי משתמשים ב־`and`, `or`, `not`
+3. מה תחזיר הפעולה `5 % 2`
 
 <!-- DC_FOOTER_START -->
+
 ---
 
 <div align="center">
 
-✨ **Thank you for learning with Dvir Cabessa** ✨  
-✨ **תודה שלמדתם עם דביר קבסה** ✨  
+✨ **Thank you for learning with Dvir Cabessa** ✨
+✨ **תודה שלמדתם עם דביר קבסה** ✨
 
-📘 *All Rights Reserved © Dvir Cabessa 2025*  
-📘 *כל הזכויות שמורות © דביר קבסה 2025*  
+📘 *All Rights Reserved © Dvir Cabessa 2025*
+📘 *כל הזכויות שמורות © דביר קבסה 2025*
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only – copying or distribution without permission is prohibited.*
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
 
-> _"Education is the art of awakening curiosity and guiding it toward creation."_  
-> _"החינוך הוא אמנות המעירה את הסקרנות ומכוונת אותה ליצירה."_  
-> — **Dvir Cabessa**
+> *"Education is the art of awakening curiosity and guiding it toward creation."*
+> *"החינוך הוא אמנות המעירה את הסקרנות ומכוונת אותה ליצירה."*
+> **Dvir Cabessa**
 
 </div>
 <!-- DC_FOOTER_END -->
-
