--- a/03_control_flow/01.0_if_else.md
+++ b/03_control_flow/01.0_if_else.md
@@ -10,11 +10,11 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘 תנאים – If...Else
+# 📘 תנאים - If...Else
 
 ## ✨ הסבר 
-לפעמים אנחנו רוצים שהמחשב יבחר מה לעשות – אם משהו נכון, אז תעשה פעולה מסוימת, ואחרת – תעשה משהו אחר.  
-בדיוק כמו שאמא אומרת: "אם סיימת את שיעורי הבית – תלך לשחק, אחרת תישאר בבית".   
+לפעמים אנחנו רוצים שהמחשב יבחר מה לעשות - אם משהו נכון, אז תעשה פעולה מסוימת, ואחרת - תעשה משהו אחר.  
+בדיוק כמו שאמא אומרת: "אם סיימת את שיעורי הבית - תלך לשחק, אחרת תישאר בבית".   
 נרשום נקודתיים לאחר סיום של כל תנאי וירידת שורה נעשה הזחה ונרשום מה יקרה
 
 ## 🔍 הסברים ודוגמאות
@@ -68,7 +68,7 @@ else:
 | צורה                  | מתי משתמשים                                 | מה היא אומרת                         |
 | --------------------- | ------------------------------------------- | ------------------------------------ |
 | `if ...` ואז `if ...` | כאשר שני התנאים נבדקים **תמיד** ו**נפרדים** | כל תנאי עומד לבד                     |
-| `if ... elif ...`     | כאשר רק **אחד** מהתנאים אמור להתבצע         | אם הראשון התקיים – השני לא נבדק בכלל |
+| `if ... elif ...`     | כאשר רק **אחד** מהתנאים אמור להתבצע         | אם הראשון התקיים - השני לא נבדק בכלל |
 
 
 ### תנאי מקוצר (inline)
@@ -79,8 +79,8 @@ print("x is greater") if x > y else print("y is greater")
 ```
 
 ## 💡 טיפים מתקדמים
-- אל תשכחו את הנקודתיים (`:`) אחרי התנאי – חובה!  
-- הזחה (indentation) היא קריטית – כל מה שבפנים חייב להיות מוזח  
+- אל תשכחו את הנקודתיים (`:`) אחרי התנאי - חובה!  
+- הזחה (indentation) היא קריטית - כל מה שבפנים חייב להיות מוזח  
 - ניתן להשתמש בכמה תנאים עם `and`, `or`, `not`
 
 ## ✅ בדוק את עצמך
@@ -99,7 +99,7 @@ print("x is greater") if x > y else print("y is greater")
 📘 *All Rights Reserved © Dvir Cabessa 2025*  
 📘 *כל הזכויות שמורות © דביר קבסה 2025*  
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only - copying or distribution without permission is prohibited.*  
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
