--- a/03_control_flow/01.1_if_else_exercises.md
+++ b/03_control_flow/01.1_if_else_exercises.md
@@ -10,38 +10,36 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘 תרגול – If...Else
+# 📘 תרגול - If...Else
 
 ## 🧪 תרגילים
+```python
 
 1. כתבו קוד שבודק אם מספר הוא חיובי או שלילי.
-```python
 number = -7
-```
 
-2. כתבו קוד שבודק אם גיל שהוזן הוא 18 ומעלה – אם כן הדפיסו `"Adult"`, אחרת `"Minor"`.
+
+2. כתבו קוד שבודק אם גיל שהוזן הוא 18 ומעלה - אם כן הדפיסו `"Adult"`, אחרת `"Minor"`.
 
 3. כתבו קוד שבודק ציון:
-```python
 grade = 82
-```
-- אם הציון 90 ומעלה – הדפיסו `"Excellent"`  
-- אם הציון בין 75 ל־89 – הדפיסו `"Good"`  
-- אחרת – `"Keep practicing"`
+
+- אם הציון 90 ומעלה - הדפיסו `"Excellent"`  
+- אם הציון בין 75 ל־89 - הדפיסו `"Good"`  
+- אחרת - `"Keep practicing"`
 
 4. כתבו קוד שבודק אם מספר זוגי או אי-זוגי.
 
-5. כתבו תנאי מקונן שבודק אם משתמש רשום (`is_registered = True`) ורק אם כן – האם יש לו הרשאות אדמין (`is_admin = True`).
+5. כתבו תנאי מקונן שבודק אם משתמש רשום (`is_registered = True`) ורק אם כן - האם יש לו הרשאות אדמין (`is_admin = True`).
 
 6. כתבו תנאי עם if-else בשורה אחת:
-```python
 x = 4
 y = 7
-```
+
 - הדפיסו מי מהשניים גדול יותר בשורה אחת בלבד.
 
-7. כתבו תנאי שבודק אם שם משתמש שווה ל־"admin" וסיסמה שווה ל־"1234" – אם כן הדפיסו `"Welcome!"`, אחרת `"Access denied"`.
-
+7. כתבו תנאי שבודק אם שם משתמש שווה ל־"admin" וסיסמה שווה ל־"1234" - אם כן הדפיסו `"Welcome!"`, אחרת `"Access denied"`.
+```
 ## 📌 הוראות
 - הקפידו על הזחה נכונה (indentation) בכל תנאי  
 - השתמשו בנקודתיים אחרי `if`, `elif`, ו־`else`  
@@ -58,7 +56,7 @@ y = 7
 📘 *All Rights Reserved © Dvir Cabessa 2025*  
 📘 *כל הזכויות שמורות © דביר קבסה 2025*  
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only - copying or distribution without permission is prohibited.*  
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
