--- a/03_control_flow/02.0_while_loops.md
+++ b/03_control_flow/02.0_while_loops.md
@@ -11,10 +11,10 @@
 ---
 <!-- DC_HEADER_END -->
 
-# 📘 לולאות While – While Loops
+# 📘 לולאות - While Loops
 
 ## ✨ הסבר
-לפעמים אנחנו רוצים שמשהו יחזור על עצמו שוב ושוב – כל עוד תנאי מסוים מתקיים.  
+לפעמים אנחנו רוצים שמשהו יחזור על עצמו שוב ושוב - כל עוד תנאי מסוים מתקיים.  
 כמו: "כל עוד לא הגעת ל-10, תמשיך לספור". בשביל זה יש לנו לולאת while!`
 
 אנחנו עושים לולאה על מנת לא ללחוץ בכל פעם מחדש על התחל
@@ -63,7 +63,7 @@ while i < 5:
 ```
 
 ## 💡 טיפים מתקדמים
-- שימו לב שתמיד יש עדכון של משתנה בתוך הלולאה – אחרת היא לא תיעצר  
+- שימו לב שתמיד יש עדכון של משתנה בתוך הלולאה - אחרת היא לא תיעצר  
 - `break` עוצר את הלולאה לגמרי  
 - `continue` מדלג לשלב הבא בלולאה מבלי להפעיל את שאר הקוד באותה ריצה
 
@@ -83,7 +83,7 @@ while i < 5:
 📘 *All Rights Reserved © Dvir Cabessa 2025*  
 📘 *כל הזכויות שמורות © דביר קבסה 2025*  
 
-🔗 *For educational purposes only – copying or distribution without permission is prohibited.*  
+🔗 *For educational purposes only - copying or distribution without permission is prohibited.*  
 🔗 *החומר נועד לשימוש חינוכי בלבד — אין להעתיק או להפיץ ללא אישור.*
 
 ---
